--- a/css/custom.css
+++ b/css/custom.css
@@ -33,8 +33,22 @@ body{
 input{
     color:rgb(1, 49, 90);
 }
+.input1{
+    width:207px;
+}
 
 .col-centered{
     float: none;
     margin: 0 auto;
+}
+
+.makeDivSmall{
+    width:60%;
+}
+
+@media screen and (min-width: 900px) {
+  .makeDivSmall{
+      width:17%;
+  }
+
 }
