Added a div for the output of the list and an ng repeat so all items in the arrays would populate on the screen as they are added to the application by the user

--- a/css/custom.css
+++ b/css/custom.css
@@ -28,6 +28,7 @@ body{
     background-color: rgb(255,255,255);
     border-radius:0;
     color: rgb(1, 49, 90);
+    text-align:center;
 }
 
 input{
